--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "chart.js": "^4.4.4",
     "chartjs-plugin-zoom": "^2.0.1",
     "echarts-for-react": "^3.0.2",
+    "highcharts": "^11.4.7",
+    "highcharts-react-official": "^3.2.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
